# libexif

./: .gitignore  CMakeLists.txt  config.h
libexif/: exif-data.c  exif-entry.c  exif-tag.c
libexif/apple/: mnote-apple-tag.c
libexif/canon/: mnote-canon-tag.c
libexif/olympus/: mnote-olympus-tag.c
